feat: 取得會員資訊，新增第三方驗證的欄位
