# controllers/user.js
@@ -17,7 +17,12 @@ const {
 const user = {
   // 取得會員資訊
   profile: asyncHandleError(async (req, res, next) => {
-    res.status(200).json(getHttpResponseContent(req.user));
+    const user = await User.findById(req.user._id).select(
+      '+googleId +facebookId'
+    );
+    const result = { ...user._doc };
+    result.thirdAuth = !!(user.googleId || user.facebookId);
+    res.status(200).json(getHttpResponseContent(result));
   }),
   // 取得特定的會員資訊
   getUserProfile: asyncHandleError(async (req, res, next) => {
